--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "fix": "eslint src/**/*.{js,jsx} --fix"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.14",
     "eslint": "^7.32.0 || ^8.2.0",
+    "framer-motion": "^10.12.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
+    "valtio": "^1.10.4",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-prettier": "^0.0.4"
   },
@@ -31,7 +34,9 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "install": "^0.13.0",
     "prettier": "^2.8.6",
+    "tailwindcss": "^3.3.2",
     "vite": "^4.2.0"
   }
 }
