--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
+    "socket.io-client": "^4.6.1",
     "storybook": "^7.0.7",
     "valtio": "^1.10.4",
     "vite-plugin-eslint": "^1.8.1",
