--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^10.12.4",
     "init": "^0.1.2",
     "joi": "^17.9.2",
+    "mocha": "^10.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
