--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "eslint src/**/*.{js,jsx}",
     "fix": "eslint src/**/*.{js,jsx} --fix",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "vitest"
   },
   "dependencies": {
+    "@testing-library/react": "^14.0.0",
     "autoprefixer": "^10.4.14",
     "axios": "0.24.0",
     "eslint": "^7.32.0 || ^8.2.0",
@@ -39,9 +41,11 @@
     "@storybook/react": "7.0.7",
     "@storybook/react-vite": "7.0.7",
     "@storybook/testing-library": "0.0.14-next.2",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@types/jest": "^29.5.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react": "^4.0.4",
     "dotenv": "^16.0.3",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -53,8 +57,14 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-storybook": "^0.6.11",
     "install": "^0.13.0",
+    "jest": "^29.6.2",
+    "jsdom": "^22.1.0",
     "prettier": "^2.8.6",
+    "sinon": "^15.2.0",
     "tailwindcss": "^3.3.2",
-    "vite": "^4.2.0"
+    "ts-jest": "^29.1.1",
+    "user-event": "^4.0.0",
+    "vite": "^4.2.0",
+    "vitest": "^0.34.1"
   }
 }
