--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
+  "engines": {
+    "node": ">=16"
+  },
   "dependencies": {
     "autoprefixer": "^10.4.14",
     "axios": "0.24.0",
