--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build-storybook": "storybook build"
   },
   "engines": {
-    "node": "18.16.1"
+    "node": ">=16"
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
