--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.10.0",
     "reactjs-popup": "^2.0.5",
     "socket.io-client": "^4.6.1",
+    "sonner": "^0.7.0",
     "storybook": "^7.0.7",
     "valtio": "^1.10.4",
     "vite-plugin-eslint": "^1.8.1",
