--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "joi": "^17.9.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "reactjs-popup": "^2.0.5",
