--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ jobs:
   deployment:
     runs-on: ubuntu-latest
     environment: 
-      name: Production
+      name: Deployment
       url: https://app-overcome.onrender.com
     steps:
       - name: deploy
