--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,8 @@ jobs:
 
 
   release:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest    
+    needs: build
     steps:
       - name: Create Zip
         run: zip -r dist.zip dist
