--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x]
+        node-version: [16.x]
 
     env:
       VITE_SERVER_BASE_URL: http://127.0.0.1:3000
@@ -31,6 +31,11 @@ jobs:
         run: yarn build
       - name: Test
         run: yarn test
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: dist
+          path: dist
 
   deploy:
     runs-on: ubuntu-latest
@@ -45,11 +50,14 @@ jobs:
         run: |
           curl "$deploy_url"
 
-
   release:
-    runs-on: ubuntu-latest    
+    runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: dist
       - name: Create Zip
         run: zip -r dist.zip dist
       - name: Create Release
