--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,8 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v2
         with:
-          name: dist
+          name: dist          
+          path: dist
       - name: Create Zip
         run: zip -r dist.zip dist
       - name: Create Release
