--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,8 @@ jobs:
           prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Upload Release Asset
+      - name: Upload Release Asset        
+        if: steps.create_release.outputs.created == 'true'
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
