--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,11 +62,11 @@ jobs:
         id: create_release
         uses: ChanTsune/release-with-commit@v2.8.0
         with:
-          regexp: "release: v([0-9]\\.[0-9]\\.[0-9])"
-          regexp_options: 'us'
-          release_name: 'version $1'
-          tag_name: 'v$1'
-          body: ''
+          regexp: "Release (\\d+([.]\\d+)*)\n*((\\s|\\S)+)"
+          regexp_options: "us"
+          release_name: "version $1"
+          tag_name: "v$1"
+          body: "$3"
           draft: false
           prerelease: false
         env:
